fixed row spacing on eventSave page

--- a/ionic/senseus/www/static/css/event.css
+++ b/ionic/senseus/www/static/css/event.css
@@ -326,7 +326,7 @@ border-color: red;
 }
 
 .flex-row, .p0 {
-  padding:0;
+  padding:1em;
 }
 
 .pl1, #event-type-container .item-content {
